[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "k8perf"
#dynamic = ["dependencies"]
dynamic = ["version"]
description = "A kubernetes network performance testing tool"
authors = [
  { name="Anders Aaen Springborg", email="aaspringborg@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
]
dependencies = [
    "typer",
    "kubernetes",
    "rich",
    "InquirerPy",
    "uplink",
    "PyYAML",
    "setuptools_scm",
    "matplotlib",
    "seaborn",
]
[project.optional-dependencies]
dev = [
  "pytest >= 6.2.5",
    "regex",
    "tox",
]

[project.scripts]
k8perf = "k8perf:app"


[tool.setuptools]
packages = ["k8perf", "benchmarks"]

[tool.setuptools.package-data]
bandwidth = ["*.yaml", "*.yml"]


[tool.setuptools.dynamic]
version = {attr = "k8perf.__version__"}

#[tool.setuptools.dynamic]
#dependencies = {file = ["requirements.txt"]}
[tool.setuptools_scm]
write_to = "k8perf/_version.py"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/radioactivebean0/cse291-cloud-network-benchmark"
"Bug Tracker" = "https://github.com/radioactivebean0/cse291-cloud-network-benchmark/issues"
